gccida/g3/copy_insn_list
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1798:4: error: expected ';' after expression
rtx v20; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1798:5: error: use of undeclared identifier 'v20'; did you mean 'v10'?
rtx v20; // r15 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1788:9: note: 'v10' declared here
__int64 v10; // rdi 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1808:4: error: expected ';' after expression
rtx v30; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1808:5: error: use of undeclared identifier 'v30'
rtx v30; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1813:4: error: expected ';' after expression
rtx v35; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1813:5: error: use of undeclared identifier 'v35'
rtx v35; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1818:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1818:5: error: use of undeclared identifier 'v40'; did you mean 'v10'?
rtx v40; // rax 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1788:9: note: 'v10' declared here
__int64 v10; // rdi 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1828:4: error: expected ';' after expression
rtx v50; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1828:5: error: use of undeclared identifier 'v50'; did you mean 'v10'?
rtx v50; // rax 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1788:9: note: 'v10' declared here
__int64 v10; // rdi 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1832:4: error: expected ';' after expression
rtx sequence[3]; // [rsp+10h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1832:5: error: use of undeclared identifier 'sequence'
rtx sequence[3]; // [rsp+10h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1845:1: error: use of undeclared identifier 'v20'
v20 = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1846:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v21 = (  struct rtx_def *)v3[2]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1851:1: error: use of undeclared identifier 'v20'
v20 = ( rtx)v3[2]; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1855:20: error: use of undeclared identifier 'v20'
if ( ( *( _DWORD *)v20->fld[0].rtwint & 0x4000FFFF) != 1073741885 ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1858:31: error: expected expression
if ( volatile_refs_p( *( rtx *)&v20[1]) ) 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1858:33: error: use of undeclared identifier 'v20'
if ( volatile_refs_p( *( rtx *)&v20[1]) ) 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/integrate.c:1863:6: error: use of undeclared identifier 'v30'
|| ( v30 = ( rtx)rtx[2], *( _WORD *)v30 != 47) && ( v30 = single_set_2( rtx, *( rtx *)&rtx[2])) == 0LL ) 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_insn_list/src/obj/integrate.o] Error 1
